[project]
name = "alan-mcp-agent"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.24",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.1",
    "playwright>=1.52.0",
    "pydantic>=2.11.5",
]
